--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 *, html{
-    box-sizing:border-box;
     font-family: 'Roboto', sans-serif;
 }
 header {
@@ -27,6 +26,7 @@ header {
     left: 40px;
     top: 20px;
     display: flex;
+    margin-bottom: 50px;
 }
 .wrapper {
     margin: auto;
@@ -75,4 +75,31 @@ header {
     margin-top:3px;
     margin-left: 30px;
 }
+span {
+    font-weight: bold;
+}
+footer {
+    position: sticky;
+    height: 35px;
+    background-image:linear-gradient(to right, rgb(72, 72, 255), darkgrey);
+    color:rgb(209, 209, 209);
+}
+.footerText {
+    width: 300px;
+    margin: auto;
+    padding-top: 2px;
+    display: flex;
+}
+#insta {
+    height: 32px;
+    margin-left: 5px;
+}
+#linkedin {
+    margin-right: 5px;
+    height: 32px;
+}
+.nameCode {
+    margin-left: 10px;
+}
+
 
